# FaceSlider-MultiLang

./: CNAME  README.md  index.html
.github/workflows/: merge-to-deploy.yml
cpp/: CMakeLists.txt  Face.cpp  Face.h  Face.ui  FaceSlider.cpp  FaceSlider.h  FaceSlider.ui  FaceSlider_en_US.ts  FaceSlider_zh_CN.ts  README.md  StyleLoader.cpp  StyleLoader.h  Widget.cpp  Widget.h  Widget.ui  main.cpp  res.qrc
cpp/styles/: button.qss
html/: index.html  script.js
vue/: README.md  index.html
vue/src/: App.vue
vue/src/components/: FaceSlider.vue
